# A-Simple-Api-Python-FastAPI

./: .env  .gitignore  README.md  main.py  pyproject.toml  test_main.http
.github/workflows/: automated-api-tests.yml  codeql.yml
app/: app.py
app/model/: __init__.py  v1.py  v2.py  v3.py
app/router/: v1.py  v2.py  v3.py
