[tool.poetry]
name = "a-simple-py-fastapi"
version = "0.1.0"
description = ""
authors = ["pk85-sp3ct0r <git.pk85@sp3ct0r.one>"]
readme = "README.md"
packages = [{include = "a_simple_py_fastapi"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.88.0"
uvicorn = "^0.20.0"
python-git-info = "^0.8.2"
python-dotenv = "^0.21.0"
pypsutil = "^0.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
