[tool.poetry]
name = "a-simple-api-python-fastapi"
version = "0.5.0"
description = ""
authors = ["pk85-sp3ct0r <git.pk85@sp3ct0r.one>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.88.0"
uvicorn = "^0.20.0"
python-git-info = "^0.8.2"
python-dotenv = "^0.21.0"
pypsutil = "^0.2.0"
pydantic = "^1.10.4"
sqlmodel = "^0.0.8"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
